# open-dash

./: .env.example  .gitignore  ACCESSIBILITY-REVIEW-TEMPLATE.md  ALERT_RULES.md  ARCHITECTURE-INDEX.md  ARCHITECTURE-PERMISSION-MODEL.md  ARCHITECTURE-PLAN-SUMMARY.md  B2B-STRATEGIC-BUNDLE.md  CI-CLI-GUIDE.md  CLAUDE.md  COMPETITIVE-INTEL-SUMMARY.txt  COMPETITIVE-INTELLIGENCE-QUICKSTART.md  COMPETITIVE-INTELLIGENCE-README.md  COMPETITOR-INTEL-OPERATIONS.md  COMPETITOR-INTELLIGENCE-SYSTEM.md  COMPONENT-ARCHITECTURE-ROADMAP.md  COMPONENT-REACTIVITY-ARCHITECTURE.md  COMPONENT-SYSTEM-VALIDATION-PRIORITY.md  COMPOSITION-IMPLEMENTATION-GUIDE.md  DATASOURCES-VS-PRIME-ARCHITECTURE.md  DECLARATIVE-ARCHITECTURE-ASSESSMENT.md  DEPLOYMENT-AUTOMATION-SETUP.md  DEPLOYMENT-CHECKLIST.md  DEPLOYMENT-PATTERNS-RESEARCH.md  DEPLOYMENT-READY.md  DEPLOYMENT-STANDARD-PROCEDURE.md  DEPLOYMENT.md  DOCUMENTATION-ORGANIZATION-COMPLETE.md  DOCUMENTATION-ORGANIZATION-PLAN.md  EPIC-27-B2B-INTELLIGENCE-PLATFORM.md  EXAMPLES-OVERVIEW.md  EXECUTION-CHECKLIST.md  EXECUTIVE-SUMMARY.md  FIX_PROPOSAL.md  GITHUB-ISSUES-SUMMARY.md  GITHUB-ISSUES-UPDATE.md  IMPLEMENTATION-COMPLETE-SUMMARY.md  LIFETIME-DEALS-STRATEGY.md  LOAD-TESTING-GUIDE.md  MARKETING-INTELLIGENCE-PIPELINE.md  (+46 more)
Standards/: COMPONENT-ECOSYSTEM-VALIDATION.md  Index.md  actual-composition-architecture-event-driven.md  architecture-v2-saas-printer.md  component-architecture-actual-value-proposition.md  component-ecosystem-gtm-strategies.md  component-registry-solves-ai-composition.md  component-sdk-spec.md  (+10 more)
src-tauri/: Cargo.toml  tauri.conf.json
(+402 files in other folders)
