[package]
name = "opendash"
version = "0.1.0"
description = "OpenDash — AI Operations Control Plane"
authors = ["Gary Wu"]
license = "MIT"
repository = "https://github.com/OpenDashAI/open-dash"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3" }
tauri-plugin-log = "2"
